--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 					</ul>
 
 					<!-- COPYRIGHT -->
-					<div class="copyright">Copyright &copy; EOS, All rights reserved</div>
+					<div class="copyright">Copyright &copy; Daniel Neri, All rights reserved</div>
 				</div>
 			</footer>
 
