--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							<img src="images/logos/hero-logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
 
 							<!-- TAGLINE -->
-							<h1 class="hero-title">Create Your App Landing Page in No Time with <strong>EOS</strong></h1>
+							<h1 class="hero-title">Axosoft on your iOS device.</h1>
 
 							<!-- HERO DESCRIPTION -->
 							<p class="hero-description">An easily customized app landing page template with smooth CSS3 animations and lots of pre-defined layouts.</p>
@@ -194,11 +194,11 @@
 						<div class="col-md-4 col-sm-6">
 							<ul class="features-list features-list-left wow fadeInLeft" data-wow-duration="1s">
 								<li class="features-list-item">
-									<h5>Awesome Features</h5>
+									<h5>View Items</h5>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
 								</li>
 								<li class="features-list-item">
-									<h5>Fully Customizable</h5>
+									<h5>Filter, Group, and Sort</h5>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
 								</li>
 							</ul>
@@ -208,11 +208,11 @@
 						<div class="col-md-4 col-md-push-4 col-sm-6">
 							<ul class="features-list features-list-right wow fadeInRight" data-wow-duration="1s">
 								<li class="features-list-item">
-									<h5>SEO Friendly</h5>
+									<h5>Search</h5>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
 								</li>
 								<li class="features-list-item">
-									<h5>8 Predefined Color Schemes</h5>
+									<h5>Share Items</h5>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
 								</li>
 							</ul>
