--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 
 		<!-- METADATA -->
-		<meta name="description" content="A Responsive Bootstrap App Landing Page Template" />
-		<meta name="keywords" content="EOS, Bootstrap, Landing page, Template, App, Mobile, Android, iOS" />
-		<meta name="author" content="David Rozando" />
+		<meta name="description" content="AxoViewer" />
+		<meta name="keywords" content="AxoViewer, Axosoft, App, Mobile, Android, iOS" />
+		<meta name="author" content="Daniel Neri" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<!-- PAGE TITLE -->
-		<title>EOS - A Responsive Bootstrap App Landing Page</title>
+		<title>AxoViewer</title>
 
 		<!-- FAVICON -->
 		<link rel="icon" href="images/favicons/favicon.ico" />
@@ -52,6 +52,17 @@
 		<!-- <link id="color-css" rel="stylesheet" href="css/colors/red.css" /> -->
 		<!-- <link id="color-css" rel="stylesheet" href="css/colors/orange.css" /> -->
 		<!-- <link id="color-css" rel="stylesheet" href="css/colors/yellow.css" /> -->
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-88042658-2', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 
 		<!-- JQUERY -->
 		<script src="js/jquery-1.11.1.min.js"></script>
