removed Play Store

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 									<strong>Download App</strong> <span>from App Store</span>
 								</a>
 								<!-- PLAY STORE DOWNLOAD -->
-								<a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
+								<!-- <a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
 									<i class="fa fa-android"></i>
 									<strong>Download App</strong> <span>from Play Store</span>
-								</a>
+								</a> -->
 								<!-- WINDOWS PHONE STORE DOWNLOAD -->
 								<!--<a href="#please-edit-this-link" class="btn btn-app-download btn-windows-phone">
 									<i class="fa fa-windows"></i>
@@ -736,10 +736,10 @@
 							<strong>Download App</strong> <span>from App Store</span>
 						</a>
 						<!-- PLAY STORE DOWNLOAD -->
-						<a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
+						<!-- <a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
 							<i class="fa fa-android"></i>
 							<strong>Download App</strong> <span>from Play Store</span>
-						</a>
+						</a> -->
 						<!-- WINDOWS PHONE STORE DOWNLOAD -->
 						<!--<a href="#please-edit-this-link" class="btn btn-app-download btn-windows-phone">
 							<i class="fa fa-windows"></i>
