--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 
 		<!-- WEB FONTS -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
 
 		<!-- ICON FONTS -->
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -79,7 +79,7 @@
 		<div id="preloader" class="preloader">
 			<div class="preloader-inner">
 				<span class="preloader-logo">
-					<img src="images/logos/preloader-logo.png" alt="EOS" />
+					<img src="images/logos/preloader-logo.png" alt="AxoViewer" />
 					<strong>Loading</strong>
 				</span>
 			</div>
@@ -142,7 +142,7 @@
 						<div class="hero-text wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
 							
 							<!-- LOGO -->
-							<img src="images/logos/hero-logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
+							<img src="images/logos/AxoViewer-logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
 
 							<!-- TAGLINE -->
 							<h1 class="hero-title">Axosoft on your iOS device.</h1>
@@ -192,12 +192,12 @@
 				<div class="container">
 
 					<!-- SECTION HEADING -->
-					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Close Up Features</h2>
-					<div class="row">
+					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Axosoft, now on your mobile device</h2>
+					<!--<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="wow fadeIn" data-wow-duration="1s">Use this section to showcase up to 4 core features from your app. You can include a short description for each feature block.</p>
 						</div>
-					</div>
+					</div>-->
 
 					<div class="featuers-list-wrapper row">
 
@@ -206,11 +206,11 @@
 							<ul class="features-list features-list-left wow fadeInLeft" data-wow-duration="1s">
 								<li class="features-list-item">
 									<h5>View Items</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<p>Beautiful and easy to use lists make it a breeze to find that one item you can't seem to locate quickly.</p>
 								</li>
 								<li class="features-list-item">
 									<h5>Filter, Group, and Sort</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<p>Just as you would on the desktop website, filter, group, and sort items using standard and custom filters.</p>
 								</li>
 							</ul>
 						</div>
@@ -220,11 +220,11 @@
 							<ul class="features-list features-list-right wow fadeInRight" data-wow-duration="1s">
 								<li class="features-list-item">
 									<h5>Search</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<p>Find any item by using the Search feature. Search by ID, name, description, or any field you need!</p>
 								</li>
 								<li class="features-list-item">
 									<h5>Share Items</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin.</p>
+									<p>Need to send Tom a link to the item you're talking about? Share Items directly within AxoViewer by any available iOS sharing option (SMS, AirDrop, etc.), and Tom can view the item right on his phone.</p>
 								</li>
 							</ul>
 						</div>
@@ -234,68 +234,6 @@
 							<img src="images/contents/features-phone.png" class="features-image wow fadeInUp" alt="" data-wow-duration="1s" />
 						</div>
 
-					</div>
-
-				</div>
-			</section>
-
-			<!--
-			=================================
-			FEATURES WITH ICONS SECTION
-			=================================
-			-->
-			<section id="features-icons" class="features-icons-section section">
-				<div class="container">
-
-					<div class="row">
-						<div class="col-md-8 col-md-push-4">
-
-							<!-- SECTION HEADING -->
-							<h2 class="section-heading wow fadeIn" data-wow-duration="1s">Features with Icons</h2>
-							<p class="wow fadeIn" data-wow-duration="1s">Need more feature details in maybe 6 or 8 items? You can use this section to put your features summary with short descriptions and retina icons for each item.</p>
-
-							<!-- FEATURES LIST WITH ICONS -->
-							<div class="features-icon-list row wow fadeIn" data-wow-duration="1s">
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-eye"></i>
-									<h5>Responsive & Retina Ready</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-cup"></i>
-									<h5>Built with Bootstrap 3</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="clear"></div>
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-equalizer"></i>
-									<h5>Easy to Customize</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-diamond"></i>
-									<h5>Clean & Elegant Design</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="clear"></div>
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-present"></i>
-									<h5>600++ Retina Icons</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="features-icon-list-item col-sm-6">
-									<i class="icon-support"></i>
-									<h5>Documentation and Support</h5>
-									<p>Excepteur sint occaecat cupidatat non proident.</p>
-								</div>
-								<div class="clear"></div>
-							</div>
-						</div>
-
-						<!-- PHONE IMAGE -->
-						<div class="col-md-4 col-md-pull-8 text-center">
-							<img src="images/contents/features-icons-phone.png" class="features-icons-image wow fadeInLeft" alt="" data-wow-duration="1s" />
-						</div>
 					</div>
 
 				</div>
@@ -336,37 +274,7 @@
 			DESCRIPTION SECTION
 			=================================
 			-->
-			<section id="description" class="description-section section">
-				<div class="container">
-
-					<div class="row">
-						<div class="col-md-7">
-
-							<!-- SECTION HEADING -->
-							<h2 class="section-heading wow fadeIn" data-wow-duration="1s">A Long Description</h2>
-							<p class="wow fadeIn" data-wow-duration="1s">Describe your mobile app in even longer paragraphs. You might include a nice icon list on this section too. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus leo mattis metus condimentum sollicitudin. Quisque convallis nec justo sed consectetur. Duis convallis nunc quis arcu sollicitudin iaculis. <a href="#">Nunc id libero malesuada</a> arcu porta tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut vestibulum, nunc eget sollicitudin euismod, erat risus tempor augue, eu vulputate nibh lorem in leo.</p>
-
-							<!-- ICON LIST -->
-							<ul class="list-with-icons wow fadeIn" data-wow-duration="1s">
-								<li><i class="icon-action-redo"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li><i class="icon-arrow-right"></i>Pellentesque dapibus leo mattis metus condimentum sollicitudin.</li>
-								<li><i class="icon-layers"></i>Quisque convallis nec justo sed consectetur.</li>
-								<li><i class="icon-bell"></i>Duis convallis nunc quis arcu sollicitudin iaculis. Nunc id libero malesuada arcu porta tempus.</li>
-							</ul>
-
-						</div>
-
-						<!-- PHONE IMAGE -->
-						<div class="col-md-5 text-center">
-
-							<img src="images/contents/description-phone-back.png" class="description-image phone-image-double phone-image-left wow fadeInRight" alt="" data-wow-duration="1s" data-wow-delay="0.5s" />
-							<img src="images/contents/description-phone-front.png" class="description-image phone-image-double phone-image-right phone-image-front wow fadeInRight" alt="" data-wow-duration="1s" data-wow-delay="1.5s" />
-
-						</div>
-					</div>
-
-				</div>
-			</section>
+			
 
 			<!--
 			=================================
@@ -410,10 +318,11 @@
 			PRICING SECTION
 			=================================
 			-->
+
+			<!--
 			<section id="pricing" class="pricing-section section">
 				<div class="container">
 
-					<!-- SECTION HEADING -->
 					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Affordable Packages</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
@@ -421,10 +330,8 @@
 						</div>
 					</div>
 
-					<!-- PRICING TABLE -->
 					<ul class="pricing-table row wow bounceIn" data-wow-duration="1s">
 
-						<!-- PRICING PACKAGE 1 -->
 						<li class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
 							<div class="pricing-package">
 								<div class="pricing-package-strip"></div>
@@ -447,7 +354,6 @@
 							</div>
 						</li>
 
-						<!-- PRICING PACKAGE 2 -->
 						<li class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
 							<div class="pricing-package pricing-package-featured">
 								<div class="pricing-package-strip"></div>
@@ -470,7 +376,6 @@
 							</div>
 						</li>
 
-						<!-- PRICING PACKAGE 3 -->
 						<li class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
 							<div class="pricing-package">
 								<div class="pricing-package-strip"></div>
@@ -496,7 +401,7 @@
 
 				</div>
 			</section>
-
+			-->
 			<!--
 			=================================
 			SCREENSHOTS SECTION
@@ -621,11 +526,10 @@
 			=================================
 			PRESS SECTION
 			=================================
-			-->
+			
 			<section id="press" class="press-section section">
 				<div class="container">
 
-					<!-- LOGOS -->
 					<div class="press-logos wow fadeIn" data-wow-duration="1s">
 						<span><img src="images/contents/press-themeforest.png" alt="themeforest" /></span>
 						<span><img src="images/contents/press-graphicriver.png" alt="graphicriver" /></span>
@@ -635,7 +539,7 @@
 
 				</div>
 			</section>
-
+			-->
 			<!--
 			=================================
 			SUBSCRIBE SECTION
@@ -676,11 +580,10 @@
 			=================================
 			CONTACT SECTION
 			=================================
-			-->
+			
 			<section id="contact" class="contact-section section collapse">
 				<div class="container">
 
-					<!-- SECTION HEADING -->
 					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Get in Touch</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
@@ -689,11 +592,10 @@
 						</div>
 					</div>
 
-					<!-- CONTACT FORM -->
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3">
 							<form action="modules/send-email.php" method="post" id="contact-form" class="contact-form wow fadeInUp" data-wow-duration="1s" role="form">
-								<div class="form-validation alert"><!-- Validation Message here --></div>
+								<div class="form-validation alert"></div>
 								<div class="form-group">
 									<input type="text" class="form-control" name="name" placeholder="Your Name" autocomplete="off">
 								</div>
@@ -715,7 +617,7 @@
 
 				</div>
 			</section>
-
+			-->
 			<!--
 			=================================
 			FOOTER SECTION
@@ -757,7 +659,7 @@
 					</ul>
 
 					<!-- COPYRIGHT -->
-					<div class="copyright">Copyright &copy; Daniel Neri, All rights reserved</div>
+					<div class="copyright">Copyright &copy; Daniel Neri, All rights reserved. AxoViewer is not affiliated with Axosoft, LLC.</div>
 				</div>
 			</footer>
 
