Updated primary image & some copy

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</button>
 
 						<!-- NAVBAR LOGO -->
-						<a class="navbar-brand navbar-logo" href="#home"><img src="images/logos/website-logo.png" alt="EOS - App Landing Page Template" /></a>
+						<a class="navbar-brand navbar-logo" href="#home"><img src="images/logos/website-logo.png" alt="Axoviewer" /></a>
 					</div>
 
 					<div id="navigation" class="navbar-collapse collapse">
@@ -142,7 +142,7 @@
 						<div class="hero-text wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
 							
 							<!-- LOGO -->
-							<img src="images/logos/AxoViewer-logo.png" alt="EOS - App Landing Page Template" class="hero-logo" />
+							<img src="images/logos/AxoViewer-logo.png" alt="Axoviewer - Axosoft Mobile App" class="hero-logo" />
 
 							<!-- TAGLINE -->
 							<h1 class="hero-title">Axosoft on your iOS device.</h1>
@@ -174,9 +174,6 @@
 						<!-- HERO IMAGES -->
 						<div class="hero-images wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
 							<img src="images/contents/hero-phone.png" class="hero-image parallax" alt="" data-stellar-ratio="0.7" />
-
-							<!-- WATCH THE VIDEO -->
-							<a href="#video" class="hero-watch-video-link anchor-link"><i class="fa fa-play"></i><span class="hidden">Watch The Video</span></a>
 						</div>
 					</div>
 
@@ -206,11 +203,11 @@
 							<ul class="features-list features-list-left wow fadeInLeft" data-wow-duration="1s">
 								<li class="features-list-item">
 									<h5>View Items</h5>
-									<p>Beautiful and easy to use lists make it a breeze to find that one item you can't seem to locate quickly.</p>
+									<p>Beautiful and easy to use lists make it a breeze to find that one Axosoft item you can't seem to locate quickly.</p>
 								</li>
 								<li class="features-list-item">
 									<h5>Filter, Group, and Sort</h5>
-									<p>Just as you would on the desktop website, filter, group, and sort items using standard and custom filters.</p>
+									<p>Just as you would on the Axosoft website, filter, group, and sort items using standard and custom filters.</p>
 								</li>
 							</ul>
 						</div>
@@ -220,11 +217,11 @@
 							<ul class="features-list features-list-right wow fadeInRight" data-wow-duration="1s">
 								<li class="features-list-item">
 									<h5>Search</h5>
-									<p>Find any item by using the Search feature. Search by ID, name, description, or any field you need!</p>
+									<p>Find any Axosoft item by using the Search feature. Search by ID, name, description, or any field you need!</p>
 								</li>
 								<li class="features-list-item">
 									<h5>Share Items</h5>
-									<p>Need to send Tom a link to the item you're talking about? Share Items directly within AxoViewer by any available iOS sharing option (SMS, AirDrop, etc.), and Tom can view the item right on his phone.</p>
+									<p>Need to send Tom a link to the item you're talking about? Share Axosoft items directly within AxoViewer by any available iOS sharing option (SMS, AirDrop, etc.), and Tom can view the item right on his phone.</p>
 								</li>
 							</ul>
 						</div>
@@ -281,14 +278,12 @@
 			TESTIMONIALS SECTION
 			=================================
 			-->
-			<section id="testimonials" class="testimonials-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
+			<!-- <section id="testimonials" class="testimonials-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
 
-				<!-- BACKGROUND OVERLAY -->
 				<div class="accent-background-overlay"></div>
 
 				<div class="container">
 
-					<!-- TESTIMONIALS -->
 					<div class="testimonials-carousel">
 						<ul class="testimonial-items owl-carousel wow fadeIn" data-wow-duration="1s">
 							<li>
@@ -311,7 +306,7 @@
 					</div>
 
 				</div>
-			</section>
+			</section> -->
 
 			<!--
 			=================================
@@ -651,11 +646,11 @@
 
 					<!-- SOCIAL MEDIA LINKS -->
 					<ul class="social-media-links wow fadeIn" data-wow-duration="1s">
-						<li><a href="http://facebook.com"><i class="fa fa-facebook"></i><span class="sr-only">Facebook</span></a>
-						<li><a href="http://twitter.com"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
-						<li><a href="http://instagram.com"><i class="fa fa-instagram"></i><span class="sr-only">Instagram</span></a>
-						<li><a href="http://pinterest.com"><i class="fa fa-pinterest"></i><span class="sr-only">Pinterest</span></a>
-						<li><a href="#"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
+						<li><a href="https://facebook.com/axoviewer" target="_blank"><i class="fa fa-facebook"></i><span class="sr-only">Facebook</span></a>
+						<li><a href="https://twitter.com/axoviewer" target="_blank"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
+						<!-- <li><a href="http://instagram.com"><i class="fa fa-instagram"></i><span class="sr-only">Instagram</span></a>
+						<li><a href="http://pinterest.com"><i class="fa fa-pinterest"></i><span class="sr-only">Pinterest</span></a> -->
+						<li><a href="#" target="_blank"><i class="fa fa-envelope"></i><span class="sr-only">Email</span></a>
 					</ul>
 
 					<!-- COPYRIGHT -->
