updated images and content

--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">Download</a></li>
 							<li><a href="#features">Features</a></li>
-							<li><a href="#video">Watch the Video</a></li>
-							<li><a href="#pricing">Go Premium</a></li>
 						</ul>
 
 					</div>
@@ -153,10 +151,12 @@
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
 								<!-- APP STORE DOWNLOAD -->
-								<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
+								<a href="https://itunes.apple.com/us/app/axoviewer/id1195147647?ls=1&mt=8" class="btn btn-app-download btn-ios">
 									<i class="fa fa-apple"></i>
 									<strong>Download App</strong> <span>from App Store</span>
 								</a>
+
+
 								<!-- PLAY STORE DOWNLOAD -->
 								<!-- <a href="#please-edit-this-link" class="btn btn-app-download btn-primary">
 									<i class="fa fa-android"></i>
@@ -241,9 +241,8 @@
 			VIDEO SECTION
 			=================================
 			-->
-			<section id="video" class="video-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
+			<!--<section id="video" class="video-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
 
-				<!-- BACKGROUND OVERLAY -->
 				<div class="black-background-overlay"></div>
 
 				<div class="container">
@@ -253,18 +252,18 @@
 
 							<div class="video-embed wow fadeIn" data-wow-duration="1s">
 
-								<!-- VIDEO EMBED FROM VIMEO: please change the URL -->
+								<!-- VIDEO EMBED FROM VIMEO: please change the URL -/->
 								<iframe src="//player.vimeo.com/video/103435603?title=0&amp;byline=0&amp;portrait=0&amp;color=8aba56" width="500" height="281" frameborder="0" allowfullscreen></iframe>
 								
-								<!-- VIDEO EMBED FROM YOUTUBE: please change the URL -->
-								<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/7UAy8E3e9f8?rel=0" frameborder="0" allowfullscreen></iframe> -->
+								<!-- VIDEO EMBED FROM YOUTUBE: please change the URL -/->
+								<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/7UAy8E3e9f8?rel=0" frameborder="0" allowfullscreen></iframe> -/->
 
 							</div>
 						</div>
 					</div>
 
 				</div>
-			</section>
+			</section> -->
 
 			<!--
 			=================================
@@ -408,110 +407,47 @@
 					<!-- SECTION HEADING -->
 					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Screenshots</h2>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3 text-center">
+						<!--<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="wow fadeIn" data-wow-duration="1s">Showcase your app screenshots into a nice carousel below. You can add as many screenshots as you want.</p>
-						</div>
+						</div>-->
 					</div>
 
 					<!-- SCREENSHOT IMAGES -->
 					<div class="sreenshots-carousel">
 						<ul class="screenshot-images owl-carousel wow bounceIn" data-wow-duration="1s">
 							<li>
-								<a href="images/contents/screenshot-1.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
+								<a href="images/contents/screenshot-1.png" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
 									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-1.jpg" alt="screenshot" />
+										<img src="images/contents/screenshot-1.png" alt="screenshot" />
 										<div class="hover"><i class="icon-magnifier-add"></i></div>
 									</div>
 								</a>
 							</li>
 							<li>
-								<a href="images/contents/screenshot-2.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
+								<a href="images/contents/screenshot-2.png" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
 									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-2.jpg" alt="screenshot" />
+										<img src="images/contents/screenshot-2.png" alt="screenshot" />
 										<div class="hover"><i class="icon-magnifier-add"></i></div>
 									</div>
 								</a>
 							</li>
 							<li>
-								<a href="images/contents/screenshot-3.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
+								<a href="images/contents/screenshot-3.png" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
 									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-3.jpg" alt="screenshot" />
+										<img src="images/contents/screenshot-3.png" alt="screenshot" />
 										<div class="hover"><i class="icon-magnifier-add"></i></div>
 									</div>
 								</a>
 							</li>
 							<li>
-								<a href="images/contents/screenshot-4.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
+								<a href="images/contents/screenshot-4.png" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
 									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-4.jpg" alt="screenshot" />
+										<img src="images/contents/screenshot-4.png" alt="screenshot" />
 										<div class="hover"><i class="icon-magnifier-add"></i></div>
 									</div>
 								</a>
 							</li>
-							<li>
-								<a href="images/contents/screenshot-1.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-1.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-2.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-2.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-3.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-3.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-4.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-4.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-1.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-1.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-2.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-2.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-3.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-3.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/contents/screenshot-4.jpg" class="screenshot-image" data-lightbox-gallery="screenshots-gallery">
-									<div class="screenshot-image-inner">
-										<img src="images/contents/screenshot-4.jpg" alt="screenshot" />
-										<div class="hover"><i class="icon-magnifier-add"></i></div>
-									</div>
-								</a>
-							</li>
+							
 						</ul>
 					</div>
 				</div>
@@ -540,14 +476,14 @@
 			SUBSCRIBE SECTION
 			=================================
 			-->
-			<section id="subscribe" class="subscribe-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
+			<!-- <section id="subscribe" class="subscribe-section section section-inverse-color parallax-background" data-stellar-background-ratio="0.4">
 
-				<!-- BACKGROUND OVERLAY -->
+				<!-- BACKGROUND OVERLAY -/->
 				<div class="black-background-overlay"></div>
 
 				<div class="container">
 
-					<!-- SECTION HEADING -->
+					<!-- SECTION HEADING -/->
 					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Subscribe to Our Updates</h2>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
@@ -555,11 +491,11 @@
 						</div>
 					</div>
 
-					<!-- SUBSCRIBE FORM -->
+					<!-- SUBSCRIBE FORM -/->
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3">
 							<form action="modules/subscribe-mailchimp.php" method="post" id="subscribe-form" class="subscribe-form wow fadeIn" data-wow-duration="1s" role="form">
-								<div class="form-validation alert"><!-- Validation Message here --></div>
+								<div class="form-validation alert"><!-- Validation Message here -/-></div>
 								<div class="form-group subscribe-form-input">
 									<input type="email" name="email" id="subscribe-form-email" class="subscribe-form-email form-control form-control-lg" placeholder="Enter your email address" autocomplete="off" />
 									<button class="subscribe-form-submit btn btn-black btn-lg" data-loading-text="Loading...">Subscribe</button>
@@ -569,7 +505,7 @@
 					</div>
 
 				</div>
-			</section>
+			</section> -->
 
 			<!--
 			=================================
@@ -621,14 +557,14 @@
 			<footer class="footer-section section">
 
 				<!-- CONTACT SECTION TOGGLE -->
-				<a href="#contact" class="contact-toggle" data-toggle="collapse"><i class="icon-envelope"></i></a>
+				<!-- <a href="#contact" class="contact-toggle" data-toggle="collapse"><i class="icon-envelope"></i></a> -->
 
 				<div class="container">
 
 					<!-- DOWNLOAD BUTTONS -->
 					<p class="download-buttons wow fadeIn" data-wow-duration="1s">
 						<!-- APP STORE DOWNLOAD -->
-						<a href="#please-edit-this-link" class="btn btn-app-download btn-ios">
+						<a href="https://itunes.apple.com/us/app/axoviewer/id1195147647?ls=1&mt=8" class="btn btn-app-download btn-ios">
 							<i class="fa fa-apple"></i>
 							<strong>Download App</strong> <span>from App Store</span>
 						</a>
