--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		<link rel="stylesheet" href="css/simple-line-icons.min.css" />
 
 		<!-- OTHER STYLES -->
-		<link rel="stylesheet" href="css/animate.min.css" />
+		<!-- <link rel="stylesheet" href="css/animate.min.css" /> -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 		<link rel="stylesheet" href="css/owl.carousel.min.css" />
 		<link rel="stylesheet" href="css/nivo-lightbox.min.css" />
 		<link rel="stylesheet" href="css/nivo-lightbox/default.min.css" />
@@ -604,7 +605,7 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/retina.min.js"></script>
 		<script src="js/smoothscroll.min.js"></script>
-		<script src="js/wow.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 		<script src="js/jquery.nav.min.js"></script>
 		<script src="js/nivo-lightbox.min.js"></script>
 		<script src="js/jquery.stellar.min.js"></script>
