--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 							<img src="images/logos/AxoViewer-logo.png" alt="Axoviewer - Axosoft Mobile App" class="hero-logo" />
 
 							<!-- TAGLINE -->
-							<h1 class="hero-title">Axosoft on your iOS device.</h1>
+							<h1 class="hero-title">Axosoft, now on your iOS device.</h1>
 
 							<!-- HERO DESCRIPTION -->
-							<p class="hero-description">An easily customized app landing page template with smooth CSS3 animations and lots of pre-defined layouts.</p>
+							<p class="hero-description">AxoViewer lets you view Axosoft items on the go.</p>
 
 							<!-- DOWNLOAD BUTTONS -->
 							<p class="download-buttons">
@@ -190,7 +190,7 @@
 				<div class="container">
 
 					<!-- SECTION HEADING -->
-					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Axosoft, now on your mobile device</h2>
+					<h2 class="section-heading text-center wow fadeIn" data-wow-duration="1s">Axosoft, now on your iOS device</h2>
 					<!--<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="wow fadeIn" data-wow-duration="1s">Use this section to showcase up to 4 core features from your app. You can include a short description for each feature block.</p>
