--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 
 		<!-- METADATA -->
-		<meta name="description" content="AxoViewer" />
+		<meta name="description" content="AxoViewer - view Axosoft items on the go" />
 		<meta name="keywords" content="AxoViewer, Axosoft, App, Mobile, Android, iOS" />
 		<meta name="author" content="Daniel Neri" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<!-- PAGE TITLE -->
-		<title>AxoViewer</title>
+		<title>AxoViewer - iOS Axosoft App</title>
 
 		<!-- FAVICON -->
 		<link rel="icon" href="images/favicons/favicon.ico" />
